--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atom-helpers",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A Node.JS package that provides helpers for Atom.io packages development (e.g: a vanilla JS equivalent of `class MyView extends View`...).",
   "keywords": [
     "atom",
@@ -11,10 +11,11 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "unitjs ./test/index.js --reporter spec"
+    "test": "mocha ./test/index.js --reporter spec"
   },
   "devDependencies": {
-    "unit.js": ">= 0.1.6 < 1.0.0"
+    "mocha": "^2.0.1",
+    "unit.js": "> 1.0.0 < 2.0.0"
   },
   "engines": {
     "node": ">= 0.10"
